tidy, add comment

--- a/popup.html
+++ b/popup.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
-<html>
-<head>
- <link rel="stylesheet" type="text/css" href="/css/styles.css">
- <script src="/js/popup.js" type="module"></script>
-</head>
-<body style="min-width:800px;min-height:488px">
-
+<html lang="en">
+  <head>
+   <link rel="stylesheet" type="text/css" href="/css/styles.css">
+   <script src="/js/popup.js" type="module"></script>
+  </head>
+  <body style="min-width:800px;min-height:488px">
   
-<div>
-  <button id="reload-btn" style="padding:.5em;margin-bottom:1em" autofocus>Reload current tab - <span id="reloadInterval">xxx</span> mins</button>
-  <button id="stop-btn" style="padding:.5em;margin-bottom:1em" >Stop reloading current tab</button>
-</div>
-<!--<div>-->
-<!--  <button id="suspend-all-btn" style="padding:.5em;margin-bottom:1em" disabled >Suspend window tabs</button>-->
-<!--  <button id="unsuspend-all-btn" style="padding:.5em;margin-bottom:1em" disabled >Unsuspend window tabs</button>-->
-<!--</div>-->
-
-<div id="log-area">
-  <ul></ul>
-</div>
-</body>
+    
+    <div>
+      <button id="reload-btn" style="padding:.5em;margin-bottom:1em" autofocus>Reload current tab - <span id="reloadInterval">xxx</span> mins</button>
+      <button id="stop-btn" style="padding:.5em;margin-bottom:1em" >Stop reloading current tab</button>
+    </div>
+    <!--<div>-->
+    <!--  <button id="suspend-all-btn" style="padding:.5em;margin-bottom:1em" disabled >Suspend window tabs</button>-->
+    <!--  <button id="unsuspend-all-btn" style="padding:.5em;margin-bottom:1em" disabled >Unsuspend window tabs</button>-->
+    <!--</div>-->
+    
+    <div id="log-area">
+      <ul></ul>
+    </div>
+  </body>
 </html>
