--- a/popup.html
+++ b/popup.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-   <link rel="stylesheet" type="text/css" href="/css/styles.css">
-   <script src="/js/popup.js" type="module"></script>
+    <link rel="stylesheet" type="text/css" href="/css/styles.css">
+    <script src="/js/popup_reloader.js" type="module"></script>
+    <script src="/js/popup_nodiscarder.js" type="module"></script>
   </head>
   <body style="min-width:800px;min-height:488px">
-  
-    
     <div>
       <button id="reload-btn" style="padding:.5em;margin-bottom:1em" autofocus>Reload current tab - <span id="reloadInterval">xxx</span> mins</button>
       <button id="stop-btn" style="padding:.5em;margin-bottom:1em" >Stop reloading current tab</button>
     </div>
-    <!--<div>-->
-    <!--  <button id="suspend-all-btn" style="padding:.5em;margin-bottom:1em" disabled >Suspend window tabs</button>-->
-    <!--  <button id="unsuspend-all-btn" style="padding:.5em;margin-bottom:1em" disabled >Unsuspend window tabs</button>-->
-    <!--</div>-->
-    
+
+    <div>
+      <button id="nodiscard-btn" style="padding:.5em;margin-bottom:1em" autofocus>Stop discarding for current tab</button>
+      <button id="rediscard-btn" style="padding:.5em;margin-bottom:1em" >Restart discarding for current tab</button>
+    </div>
     <div id="log-area">
       <ul></ul>
     </div>
