add extension reloader/alarm killer button

--- a/popup.html
+++ b/popup.html
@@ -15,6 +15,13 @@
       <button id="nodiscard-btn" style="padding:.5em;margin-bottom:1em" autofocus>Stop discarding for current tab</button>
       <button id="rediscard-btn" style="padding:.5em;margin-bottom:1em" >Restart discarding for current tab</button>
     </div>
+
+    <hr />
+    <div>
+      <button id="reset-ext-btn" style="padding:.5em;margin-bottom:1em" autofocus>Clear alarms and reload extension</button>
+    </div>
+
+
     <div id="log-area">
       <ul></ul>
     </div>
