--- a/popup.html
+++ b/popup.html
@@ -7,8 +7,14 @@
   </head>
   <body style="min-width:800px;min-height:488px">
     <div>
-      <button id="reload-btn" style="padding:.5em;margin-bottom:1em" autofocus>Reload current tab - <span id="reloadInterval">xxx</span> mins</button>
-      <button id="stop-btn" style="padding:.5em;margin-bottom:1em" >Stop reloading current tab</button>
+      <div>
+        <label for="reloadInterval">Interval</label>
+        <input type="number" min="0.5" step="0.5" id="reloadInterval" />
+      </div>
+      <div>
+        <button id="reload-btn" style="padding:.5em;margin-bottom:1em" autofocus>Reload current tab</button>
+        <button id="stop-btn" style="padding:.5em;margin-bottom:1em" >Stop reloading current tab</button>
+      </div>
     </div>
 
     <div>
