add broader DEV vs non-dev effects

--- a/popup.html
+++ b/popup.html
@@ -22,11 +22,12 @@
       <button id="rediscard-btn" style="padding:.5em;margin-bottom:1em" >Restart discarding for current tab</button>
     </div>
 
-    <hr />
-    <div>
-      <button id="reset-ext-btn" style="padding:.5em;margin-bottom:1em" autofocus>Clear alarms and reload extension</button>
+    <div id="dev-tools">
+      <hr />
+      <div>
+        <button id="reset-ext-btn" style="padding:.5em;margin-bottom:1em" autofocus>Clear alarms and reload extension</button>
+      </div>
     </div>
-
 
     <div id="log-area">
       <ul></ul>
