--- a/popup.html
+++ b/popup.html
@@ -8,11 +8,11 @@
   <body style="min-width:800px;min-height:488px">
     <div>
       <div>
-        <label for="reloadInterval">Interval</label>
+        <label for="reloadInterval">Interval (mins)</label>
         <input type="number" min="0.5" step="0.5" id="reloadInterval" />
       </div>
       <div>
-        <button id="reload-btn" style="padding:.5em;margin-bottom:1em" autofocus>Reload current tab</button>
+        <button id="reload-btn" style="padding:.5em;margin-bottom:1em" autofocus>Start reloading current tab</button>
         <button id="stop-btn" style="padding:.5em;margin-bottom:1em" >Stop reloading current tab</button>
       </div>
     </div>
